--- a/index.html
+++ b/index.html
@@ -276,16 +276,17 @@
     .movie-download-button {
       padding: 2px 8px;
       border-radius: 999px;
-      border: 1px solid rgba(224, 198, 128, 0.4);
-      background: transparent;
-      color: var(--accent);
+      border: 1px solid var(--border);
+      background: rgba(0, 0, 0, 0.4);
+      color: var(--muted);
       font-size: 10px;
       cursor: pointer;
     }
 
     .movie-download-button:hover {
-      border-color: rgba(224, 198, 128, 0.7);
-      background: rgba(224, 198, 128, 0.08);
+      border-color: rgba(224, 198, 128, 0.5);
+      background: rgba(224, 198, 128, 0.06);
+      color: var(--accent);
     }
 
     .movie-download-button.is-progress {
