--- a/index.html
+++ b/index.html
@@ -929,13 +929,10 @@
         if (button) {
           if (rawProgress == null || rawProgress <= 0) {
             button.textContent = button.dataset.baseLabel || "Download";
+          } else if (rawProgress >= 99.5) {
+            button.classList.add("is-done");
           } else {
-            button.textContent = progressLabel;
-            if (rawProgress >= 99.5) {
-              button.classList.add("is-done");
-            } else {
-              button.classList.add("is-progress");
-            }
+            button.classList.add("is-progress");
           }
         }
       });
