--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 
     <footer>
       <span>Open this file directly or via any static server.</span>
-      <span>Collection metadata source: <a href="https://en.btdig.com/c9c47e7b12586a59d83e3e519570835625d44b3e/werner-herzog">Werner Herzog torrent</a>.</span>
+      <span>Source: <a href="https://github.com/l159375751/cinema">cinema on GitHub</a>.</span>
     </footer>
   </div>
 
