--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
     .status-panel {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      grid-template-columns: repeat(5, minmax(0, 1fr));
       gap: 8px 16px;
       align-items: flex-start;
       margin-top: 4px;
