--- a/index.html
+++ b/index.html
@@ -278,8 +278,11 @@
       border-radius: 999px;
       border: 1px solid var(--border);
       background: rgba(0, 0, 0, 0.4);
-      color: var(--muted);
+      color: var(--accent);
       font-size: 10px;
+      font-weight: 500;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
       cursor: pointer;
     }
 
