--- a/index.html
+++ b/index.html
@@ -351,6 +351,12 @@
       color: var(--accent);
     }
 
+    #status-title {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
     .status-caption {
       margin-top: 8px;
       font-size: 11px;
