--- a/index.html
+++ b/index.html
@@ -561,6 +561,10 @@
       resize: vertical;
     }
 
+    #whda-infohashes {
+      height: 220px;
+    }
+
     footer {
       margin-top: 4px;
       font-size: 11px;
